// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`onShape > optimize #1 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.foo === a ? transform(value) : false;"
`;

exports[`onShape > optimize #2 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.foo === a ? value : false;"
`;

exports[`onShape > optimize #3 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.foo === a ? v : false;"
`;

exports[`onShape > optimize #4 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.foo === a ? value ? 1 : 2 : false;"
`;

exports[`onShape > optimize #5 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.foo === a ? value.foo : false;"
`;

exports[`onShape > optimize #6 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.foo === a ? transform(value) : false;"
`;

exports[`onShape > optimize #7 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.foo === a ? transform(value.foo) : false;"
`;

exports[`onShape > optimize #8 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.foo === a && value.bar === b ? transform(value) : false;"
`;

exports[`onShape > optimize #9 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.foo === a && value.bar === b ? value : false;"
`;

exports[`onShape > optimize #10 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.foo === a && value.bar === b ? v : false;"
`;

exports[`onShape > optimize #11 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.foo === a && value.bar === b ? value ? 1 : 2 : false;"
`;

exports[`onShape > optimize #12 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.foo === a && value.bar === b ? value.foo : false;"
`;

exports[`onShape > optimize #13 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.foo === a && value.bar === b ? transform(value) : false;"
`;

exports[`onShape > optimize #14 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.foo === a && value.bar === b ? transform(value.foo) : false;"
`;

exports[`onShape > optimize #15 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.baz === a ? transform(value) : false;"
`;

exports[`onShape > optimize #16 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.baz === a ? value : false;"
`;

exports[`onShape > optimize #17 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.baz === a ? v : false;"
`;

exports[`onShape > optimize #18 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.baz === a ? value ? 1 : 2 : false;"
`;

exports[`onShape > optimize #19 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.baz === a ? value.foo : false;"
`;

exports[`onShape > optimize #20 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.baz === a ? transform(value) : false;"
`;

exports[`onShape > optimize #21 1`] = `
"import { match } from "@monstermann/match";
value && typeof value === "object" && value.baz === a ? transform(value.foo) : false;"
`;

exports[`onShape > optimize #22 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.foo === a ? transform(_value) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onShape > optimize #23 1`] = `
"import { match } from "@monstermann/match";
a === a ? value : false;"
`;

exports[`onShape > optimize #24 1`] = `
"import { match } from "@monstermann/match";
a === a ? v : false;"
`;

exports[`onShape > optimize #25 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.foo === a ? _value ? 1 : 2 : false)({
  foo: a,
  bar: b
});"
`;

exports[`onShape > optimize #26 1`] = `
"import { match } from "@monstermann/match";
a === a ? a : false;"
`;

exports[`onShape > optimize #27 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.foo === a ? transform(_value) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onShape > optimize #28 1`] = `
"import { match } from "@monstermann/match";
a === a ? transform(a) : false;"
`;

exports[`onShape > optimize #29 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.foo === a && _value.bar === b ? transform(_value) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onShape > optimize #30 1`] = `
"import { match } from "@monstermann/match";
a === a && b === b ? value : false;"
`;

exports[`onShape > optimize #31 1`] = `
"import { match } from "@monstermann/match";
a === a && b === b ? v : false;"
`;

exports[`onShape > optimize #32 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.foo === a && _value.bar === b ? _value ? 1 : 2 : false)({
  foo: a,
  bar: b
});"
`;

exports[`onShape > optimize #33 1`] = `
"import { match } from "@monstermann/match";
a === a && b === b ? a : false;"
`;

exports[`onShape > optimize #34 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.foo === a && _value.bar === b ? transform(_value) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onShape > optimize #35 1`] = `
"import { match } from "@monstermann/match";
a === a && b === b ? transform(a) : false;"
`;

exports[`onShape > optimize #36 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.baz === a ? transform(_value) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onShape > optimize #37 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.baz === a ? value : false)({
  foo: a,
  bar: b
});"
`;

exports[`onShape > optimize #38 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.baz === a ? v : false)({
  foo: a,
  bar: b
});"
`;

exports[`onShape > optimize #39 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.baz === a ? _value ? 1 : 2 : false)({
  foo: a,
  bar: b
});"
`;

exports[`onShape > optimize #40 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.baz === a ? _value.foo : false)({
  foo: a,
  bar: b
});"
`;

exports[`onShape > optimize #41 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.baz === a ? transform(_value) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onShape > optimize #42 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.baz === a ? transform(_value.foo) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onShape > optimize #43 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.foo === a ? transform(_value) : false)(getValue());"
`;

exports[`onShape > optimize #44 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.foo === a ? value : false)(getValue());"
`;

exports[`onShape > optimize #45 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.foo === a ? v : false)(getValue());"
`;

exports[`onShape > optimize #46 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.foo === a ? _value ? 1 : 2 : false)(getValue());"
`;

exports[`onShape > optimize #47 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.foo === a ? _value.foo : false)(getValue());"
`;

exports[`onShape > optimize #48 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.foo === a ? transform(_value) : false)(getValue());"
`;

exports[`onShape > optimize #49 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.foo === a ? transform(_value.foo) : false)(getValue());"
`;

exports[`onShape > optimize #50 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.foo === a && _value.bar === b ? transform(_value) : false)(getValue());"
`;

exports[`onShape > optimize #51 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.foo === a && _value.bar === b ? value : false)(getValue());"
`;

exports[`onShape > optimize #52 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.foo === a && _value.bar === b ? v : false)(getValue());"
`;

exports[`onShape > optimize #53 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.foo === a && _value.bar === b ? _value ? 1 : 2 : false)(getValue());"
`;

exports[`onShape > optimize #54 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.foo === a && _value.bar === b ? _value.foo : false)(getValue());"
`;

exports[`onShape > optimize #55 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.foo === a && _value.bar === b ? transform(_value) : false)(getValue());"
`;

exports[`onShape > optimize #56 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.foo === a && _value.bar === b ? transform(_value.foo) : false)(getValue());"
`;

exports[`onShape > optimize #57 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.baz === a ? transform(_value) : false)(getValue());"
`;

exports[`onShape > optimize #58 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.baz === a ? value : false)(getValue());"
`;

exports[`onShape > optimize #59 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.baz === a ? v : false)(getValue());"
`;

exports[`onShape > optimize #60 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.baz === a ? _value ? 1 : 2 : false)(getValue());"
`;

exports[`onShape > optimize #61 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.baz === a ? _value.foo : false)(getValue());"
`;

exports[`onShape > optimize #62 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.baz === a ? transform(_value) : false)(getValue());"
`;

exports[`onShape > optimize #63 1`] = `
"import { match } from "@monstermann/match";
(_value => _value && typeof _value === "object" && _value.baz === a ? transform(_value.foo) : false)(getValue());"
`;
